--- a/MovieGUIFinal/src/application/MediaView.fxml
+++ b/MovieGUIFinal/src/application/MediaView.fxml
@@ -1,21 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.effect.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.media.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MediaViewController">
+<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MediaViewController">
    <center>
       <MediaView fx:id="mv" blendMode="SRC_ATOP" fitHeight="200.0" fitWidth="200.0" BorderPane.alignment="CENTER" />
    </center>
    <bottom>
-      <ToolBar fx:id="toolbar" prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <ToolBar fx:id="toolbar" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #000000;" BorderPane.alignment="CENTER">
         <items>
-            <ToggleButton fx:id="toggleButton" mnemonicParsing="false" onAction="#mainAction" />
-            <ToggleButton fx:id="fullscreen" alignment="CENTER_RIGHT" contentDisplay="RIGHT" mnemonicParsing="false" onAction="#fullscreen" textAlignment="RIGHT" />
+            <ToggleButton fx:id="toggleButton" mnemonicParsing="false" onAction="#mainAction" style="-fx-background-color: #343434;" />
+            <ToggleButton fx:id="fullscreen" alignment="CENTER_RIGHT" contentDisplay="RIGHT" mnemonicParsing="false" onAction="#fullscreen" style="-fx-background-color: #343434;" textAlignment="RIGHT" />
+            <Slider fx:id="volumeSlider" style="-fx-background-color: #343434;">
+               <effect>
+                  <DropShadow />
+               </effect>
+            </Slider>
         </items>
       </ToolBar>
    </bottom>
+   <left>
+      <Region prefHeight="360.0" prefWidth="7.0" BorderPane.alignment="CENTER" />
+   </left>
+   <top>
+      <Region prefHeight="7.0" prefWidth="600.0" BorderPane.alignment="CENTER" />
+   </top>
+   <right>
+      <Region prefHeight="353.0" prefWidth="2.0" BorderPane.alignment="CENTER" />
+   </right>
 </BorderPane>
